scss preliminary stuff

--- a/src/quiz/Counter.scss
+++ b/src/quiz/Counter.scss
@@ -8,10 +8,9 @@
   position: fixed;
   bottom: 0;
   left: 0;
-}
-
-.counter-info p {
-  margin-top: 16px;
+  p: {
+    margin-top: 16px;
+  }
 }
 
 
