--- a/src/quiz/Results.scss
+++ b/src/quiz/Results.scss
@@ -5,37 +5,31 @@
   background-color: white;
   border-radius: 20px;
   text-align: center;
-}
-
-.result-box h1 {
-  font-size: 36px;
-  margin-bottom: -25px;
-  margin-top: 5px;
-}
-
-.result-box h2 {
-  font-size: 38px;
-  margin-bottom: 15px;
-}
-
-.result-box img {
-  width: 75%;
-  border-radius: 20px;
-}
-
-.result-box p {
-  padding: 10px 80px;
-}
-
-.result-box .share-this a {
-  display: block;
-}
-
-.result-box .share-this .fbpic {
-  margin-top: 2px;
-  margin-bottom: 15px;
-  display: inline-block;
-  width: 145px;
+  h1 {
+    font-size: 36px;
+    margin-bottom: -25px;
+    margin-top: 5px;
+  }
+  h2 {
+    font-size: 38px;
+    margin-bottom: 15px;
+  }
+  img {
+    width: 75%;
+    border-radius: 20px;
+  }
+  p {
+    padding: 10px 80px;
+  }
+  .share-this a {
+    display: block;
+    .fbpic {
+      margin-top: 2px;
+      margin-bottom: 15px;
+      display: inline-block;
+      width: 145px;
+    }
+  }
 }
 
 @media (min-width:801px) {
@@ -46,9 +40,9 @@
     margin-right: auto;
     margin-top: 10px;
     margin-bottom: 10px;
-  }
-  .result-box .img {
-    min-width: 40px;
+    .img {
+      min-width: 40px;
+    }
   }
 }
 
@@ -60,8 +54,8 @@
     border-radius: 10px;
     max-width: 800px;
     min-width: 320px;
-  }
-  .result-box .img {
-    min-width: 40px;
+    .img {
+      min-width: 40px;
+    }
   }
 }
