--- a/src/quiz/Counter.scss
+++ b/src/quiz/Counter.scss
@@ -1,4 +1,4 @@
-.counter-info {
+.count {
   border: 1px solid black;
   background-color: white;
   color: #59605f;
@@ -8,10 +8,13 @@
   position: fixed;
   bottom: 0;
   left: 0;
+  p {
+    margin-top: 16px;
+  }
+  .hidden {
+    visibility: hidden;
+  }
 }
 
-.counter-info p {
-  margin-top: 16px;
-}
 
 
