--- a/src/quiz/Results.scss
+++ b/src/quiz/Results.scss
@@ -2,18 +2,22 @@
   border: 2px #6ec8b2 solid;
   margin: 10px 250px;
   background-color: white;
-  border-radius: 20px;
+  border-radius: 4px;
   text-align: center;
   h1 {
     font-size: 36px;
     margin-bottom: -25px;
-    margin-top: 5px;
+    margin-top: 15px;
+    font-weight: 300;
+    text-align: left;
+    margin-left: 100px;
   }
   h2 {
     font-size: 38px;
+    font-weight: 300;
     margin-bottom: 15px;
     text-align: left;
-    margin-left: 110px;
+    margin-left: 100px;
   }
   img {
     width: 75%;
