--- a/src/layouts/header.scss
+++ b/src/layouts/header.scss
@@ -25,6 +25,7 @@ header.global {
     margin-top: 15px;
     font-size: 36px;
     font-family: 'Poiret One', cursive;
+    text-decoration: none;
   }
 
   .profile-menu {
