added profile coming soon page

--- a/src/layouts/footer.scss
+++ b/src/layouts/footer.scss
@@ -10,14 +10,14 @@
   width: 100%;
   a {
     text-decoration: none;
-    color: red;
+    color: blue;
     text-align: center;
     margin-left: 328px;
     transition: margin-left 0.4s ease-in-out;
     display: inline-block;
   }
   a:hover {
-    color: blue;
+    color: #f97131;
   }
   .logo {
     height: 20px;
