--- a/src/quiz/Introquiz.scss
+++ b/src/quiz/Introquiz.scss
@@ -6,7 +6,7 @@
     .quiz-name {
       font-size: 48px;
       margin-top: 5px;
-      color: #59605f;
+      color: #f97131;
       width: 80%;
       margin-left: auto;
       margin-right: auto;
@@ -14,8 +14,12 @@
       display: inline-block;
     }
     .sum {
-      margin: 25px 5px 25px 5px;
+      margin: 45px 5px 25px 5px;
+      padding-left: 55px;
+      width: 80%;
       color: #59605f;
+      font-size: 22px;
+      text-align: left;
     }
     .Quiz-pic {
       border-radius: 10px;
