--- a/src/quiz/Results.scss
+++ b/src/quiz/Results.scss
@@ -1,8 +1,7 @@
 .result-box {
-  border: 2px #6ec8b2 solid;
-  margin: 10px 250px;
+  margin: 25px 250px;
+  padding: 8px 5px;
   background-color: white;
-  border-radius: 4px;
   text-align: center;
   h1 {
     font-size: 36px;
@@ -22,11 +21,14 @@
   p {
     padding: 8px 80px;
     text-align: left;
-    margin-left: 50px;
+    margin-left: 22px;
+    font-size: 22px;
   }
   .share-this {
     a {
       display: block;
+      text-decoration: none;
+      font-size: 22px;
     }
     .fbpic {
       margin-top: 2px;
